[metadata]
name = pycinga
author = Dylan Page
author_email = genpage@pagefortress.com
summary = A library for interacting/scrapping Icinga 1 CGI endpoints
description-file = README.md
home-page = https://github.com/GenPage/pycinga
license = Apache
classifiers =
    Development Status :: 4 - Beta'
    Programming Language :: Python :: 3'
    License :: OSI Approved :: Apache Software License'
    Operating System :: OS Independent'
    Topic :: Software Development :: Libraries'
    Topic :: System :: Monitoring'
keywords =
    icinga

[files]
packages =
    pycinga

[wheel]
universal = 1