[metadata]
name = icingapy
author = Dylan Page
author_email = genpage@pagefortress.com
summary = A library for interacting/scrapping Icinga 1 CGI endpoints
description-file = README.rst
home-page = https://github.com/GenPage/icingapy
license = Apache
classifiers =
    Development Status :: 4 - Beta'
    Programming Language :: Python :: 3'
    License :: OSI Approved :: Apache Software License'
    Operating System :: OS Independent'
    Topic :: Software Development :: Libraries'
    Topic :: System :: Monitoring'
keywords =
    icinga

[files]
packages =
    icingapy

[wheel]
universal = 1
