[metadata]
name = icingapy
author = Dylan Page
author_email = genpage@pagefortress.com
summary = A library for interacting/scrapping Icinga 1 CGI endpoints
description-file = README.rst
home-page = https://github.com/GenPage/icingapy
license = Apache-2
python_requires = ~=3.6
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: System :: Monitoring
keywords =
    icinga

[files]
packages =
    icingapy

[bdist_wheel]
universal = 0
